--- a/src/views/pages/configurator-servera-hpe.j2
+++ b/src/views/pages/configurator-servera-hpe.j2
@@ -74,10 +74,10 @@
                     <div class="conf-group__row">
                       <select class="form__select" id="server-conf-ram-type" name="server-conf-ram-type">
                         <option value="">Выбрать из списка</option>
-                        <option value="Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)">Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)</option>
-                        <option value="Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)">Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)</option>
-                        <option value="Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)">Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)</option>
-                        <option value="Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)">Intel Xeon E5-2630L (6C 15M Cache 2.00 GHz)</option>
+                        <option value="4GB DDR3 ECC REG 1333MHz">4GB DDR3 ECC REG 1333MHz</option>
+                        <option value="4GB DDR3 ECC REG 1333MHz">4GB DDR3 ECC REG 1333MHz</option>
+                        <option value="4GB DDR3 ECC REG 1333MHz">4GB DDR3 ECC REG 1333MHz</option>
+                        <option value="4GB DDR3 ECC REG 1333MHz">4GB DDR3 ECC REG 1333MHz</option>
                       </select>
                       <div class="form__field-number-wrapper">
                         <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
@@ -110,7 +110,7 @@
               </li>
               <li class="server-conf__group-list-item">
                 <div class="conf-group">
-                  <p class="conf-group__title conf-group__title--hdd">Жесткие диски</p>
+                  <p class="conf-group__title conf-group__title--hdd conf-group__title--long">Жесткие диски</p>
                   <div class="conf-group__content">
                     <p class="conf-group__info">Для добавления SAS дисков, сначала выберите RAID-контролеер</p>
                     <div class="conf-group__row">
@@ -252,6 +252,20 @@
               </svg>
             </div>
             <button class="server-conf__order-button button button--blue" type="button">Заказать</button>
+          </div>
+        </div>
+        <div class="server-conf__summary bg bg--lg pads">
+          <div class="server-conf__config-list">
+            <span class="server-conf__summary-title">Конфигурация сервера HPE ProLiant DL380 Gen10</span>
+            <div class="server-conf__config">
+            </div>
+            <div class="server-conf__price-wrapper server-conf__summary-price">
+              <span class="server-conf__price">582 940 ₽</span>
+              <span class="server-conf__credit-price">24 290 ₽</span>
+              <svg class="server-conf__info-icon" width="18" height="19" viewBox="0 0 18 19">
+                <use xlink:href="img/sprite.svg#info-icon"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
