--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -86,3 +86,4 @@
 @import "./blocks/admin-cons.scss";
 @import "./blocks/conf-group.scss";
 @import "./blocks/server-conf.scss";
+@import "./blocks/soft-catalog.scss";
