--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,6 +8,7 @@ $paddings-desktop: $pads-d * 1px;
 $min-mobile-width: 320px;
 $average-mobile-width: 400px;
 $tablet-width: 768px;
+$desktop-width-without-pads: 1121px;
 $desktop-width: 1121px + 2 * $paddings-desktop;
 $desktop-swiper-width: 1121px + 2 * $paddings-desktop + 150px;
 $max-mobile-width: $tablet-width - 1px;
