сделал блок по импортозамещению ПО

--- a/src/views/pages/software.j2
+++ b/src/views/pages/software.j2
@@ -104,6 +104,7 @@
       </div>
     </section>
 
+    {% include "./blocks/soft-imp-rep.j2" %}
     {% include "./blocks/consultation.j2" %}
   </main>
 {% endblock content %}
