--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,3 +87,4 @@
 @import "./blocks/conf-group.scss";
 @import "./blocks/server-conf.scss";
 @import "./blocks/soft-catalog.scss";
+@import "./blocks/soft-imp-rep.scss";
