сделал каталог ос

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -88,3 +88,4 @@
 @import "./blocks/server-conf.scss";
 @import "./blocks/soft-catalog.scss";
 @import "./blocks/soft-imp-rep.scss";
+@import "./blocks/os-catalog.scss";
