--- a/src/views/pages/software.j2
+++ b/src/views/pages/software.j2
@@ -36,7 +36,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">Операционные системы</a>
+                  <a class="equipment-card__title" href="./os.html">Операционные системы</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-os.webp 1x">
@@ -47,7 +47,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">Серверное ПО</a>
+                  <a class="equipment-card__title" href="./os.html">Серверное ПО</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-server-soft.webp 1x">
@@ -58,7 +58,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">защита систем и информации</a>
+                  <a class="equipment-card__title" href="./os.html">защита систем и информации</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-def.webp 1x">
@@ -69,7 +69,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">Офисные программы</a>
+                  <a class="equipment-card__title" href="./os.html">Офисные программы</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-office.webp 1x">
@@ -80,7 +80,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">Облачные решения</a>
+                  <a class="equipment-card__title" href="./os.html">Облачные решения</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-cloud.webp 1x">
@@ -91,7 +91,7 @@
             <li class="soft-catalog__item">
               <div class="equipment-card equipment-card--soft">
                 <div class="equipment-card__content">
-                  <a class="equipment-card__title" href="./#!.html">Графика и дизайн</a>
+                  <a class="equipment-card__title" href="./os.html">Графика и дизайн</a>
                 </div>
                 <picture>
                   <source type="image/webp" srcset="@img/soft-catalog/card-design.webp 1x">
