--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -89,3 +89,4 @@
 @import "./blocks/soft-catalog.scss";
 @import "./blocks/soft-imp-rep.scss";
 @import "./blocks/os-catalog.scss";
+@import "./blocks/os.scss";
