сделал список с картчоками лицензий на странице ОС

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -90,3 +90,5 @@
 @import "./blocks/soft-imp-rep.scss";
 @import "./blocks/os-catalog.scss";
 @import "./blocks/os.scss";
+@import "./blocks/lic-card.scss";
+@import "./blocks/os-lic.scss";
