--- a/src/views/pages/os-page.j2
+++ b/src/views/pages/os-page.j2
@@ -70,7 +70,172 @@
       </div>
     </section>
 
+    <section class="os-lic section pads">
+      <div class="container">
+        <div class="section__content">
+          <h2 class="os-lic__title title">Лицензии</h2>
+          <ul class="os-lic__list">
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+            <li class="os-list__item">
+              <div class="lic-card">
+                <div class="lic-card__content">
+                  <span class="lic-card__title">Secret Disk Enterprise</span>
+                  <p class="lic-card__text">Корпоративная система защиты информации с централизованным управлением</p>
+                  <ul class="lic-card__list">
+                    <li class="lic-card__item">Защита данных сотрудников организации от несанкционированного доступа и утечки</li>
+                    <li class="lic-card__item">Надёжная двухфакторная аутентификация для доступа к защищаемым данным</li>
+                    <li class="lic-card__item">Высокопроизводительная масштабируемая архитектура</li>
+                    <li class="lic-card__item">Централизованное управление и мониторинг</li>
+                    <li class="lic-card__item">Поддержка отказоустойчивых конфигураций</li>
+                    <li class="lic-card__item">Низкая стартовая стоимость приобретения</li>
+                    <li class="lic-card__item">Быстрое внедрение</li>
+                    <li class="lic-card__item">Поддержка клиентских операционных систем Microsoft Windows версий 7 SP1, 8, 8.1, 10</li>
+                  </ul>
+                  <picture class="lic-card__image-wrapper">
+                    <source type="image/webp" srcset="@img/lic-card-image.webp 1x">
+                    <img class="lic-card__image" src="@img/lic-card-image.png" alt="Изображении лицензии Secret Disk Enterprise" width="120" height="200">
+                  </picture>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     {% include "./blocks/soft-imp-rep.j2" %}
+    {% include "./blocks/consultation.j2" %}
   </main>
 {% endblock content %}
 
@@ -79,5 +244,6 @@
 {% endblock %}
 
 {% block js %}
+<script src="./js/engineer-cons.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
