сделал верстку сравнения серверов для двух товаров

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,3 +92,4 @@
 @import "./blocks/os.scss";
 @import "./blocks/lic-card.scss";
 @import "./blocks/os-lic.scss";
+@import "./blocks/serv-comp.scss";
