--- a/src/views/pages/server-comparison.j2
+++ b/src/views/pages/server-comparison.j2
@@ -24,7 +24,7 @@
     <section class="serv-comp section pads">
       <div class="container">
         <div class="serv-comp__content section__content">
-          <h1 class="title">Сравнение серверов</h1>
+          <h1 class="serv-comp__title title">Сравнение серверов</h1>
           <div class="serv-comp__buttons section__card-swiper-buttons">
             <button class="section__swiper-button section__swiper-button--prev" type="button" id="serv-comp-prev">
               <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
