--- a/src/views/pages/server-comparison.j2
+++ b/src/views/pages/server-comparison.j2
@@ -201,6 +201,8 @@
       </div>
     </section>
 
+    {% include "./blocks/need-help.j2" %}
+
   </main>
 {% endblock content %}
 
@@ -210,5 +212,6 @@
 
 {% block js %}
   <script src="./js/serv-comp.min.js"></script>
+  <script src="./js/need-help.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
